got the proper lists working

--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,1 +1,7 @@
-<%= task.get('name') %> | <%= task.get('done') %>
+<%= task.get('name') %> | <%= task.get('done') %> | 
+<% if(task.get('done') === true) { %>
+  <a href="#" class="toggle">Mark as unfinished</a> |
+  <input type="checkbox" name="remove">
+<% } else { %>
+  <a href="#" class="toggle">Mark as finished</a>
+<% } %>
