--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,5 +1,11 @@
 <h1>Failboat</h1>
 
+<form id="new_task">
+  <input type="text" name="name" id="new_task_name">
+  <input type="submit" value="Add New Task">
+</form>
+
+
 <h2>To Do</h2>
 <ul id="tasks">
 </ul>
