fixed duping bug

--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,4 +1,4 @@
-<%= task.escape('name') %> | <%= task.escape('done') %> | 
+<%= task.escape('name') %> | 
 <% if(task.get('done') === true) { %>
   <a href="#" class="toggle">Mark as unfinished</a> |
 <% } else { %>
