going to master

--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,3 +1,2 @@
 <a href="#tasks/<%= task.escape('id') %>"><%= task.escape('name') %></a> 
-<!-- <input type="checkbox" name="remove">
- -->
+<input type="checkbox" name="remove">
