--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,15 +1,21 @@
+body {
+  background-color: #eee;
+}
+
 #container {
   width: 1000px;
   position: relative;
 }
 
 #main {
+  background-color: #fff;
   width: 500px;
   float: left;
   border: 1px solid gray; 
 }
 
 #sidebar {
+  background-color: #fff;
   width: 480px;
   float: left;
   border: 1px solid gray;
