--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,5 +1,7 @@
 <h1>Failboat</h1>
 
+<h4 id="remaining">Remaining Tasks: </h4>
+
 <form id="new_task">
   <input type="text" name="name" id="new_task_name">
   <input type="submit" value="Add New Task">
@@ -12,3 +14,4 @@
 
 <h2>Finished (click box to remove)</h2>
 <ul id="finished"></ul>
+
