bootlegged but login/cookies are working, need to figure out how to async loading of user so I can display info, also need to make sure I'm doing this securely

--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,4 +1,6 @@
-<h1>Tasks for <%= user.get('email') %></h1>
+<h1>Tasks for</h1>
+
+<a href="#" id="log_out">Log Out</a>
 
 <h4 id="remaining">Remaining Tasks: </h4>
 
