working better, stronger, faster

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,14 @@
+<div id="header">
+  <h1 id="welcome">Welcome to a crappy one page app</h1>
+  <ul id="nav_links">
+    <li>Link1</li>
+    <li>Link2</li>
+    <li>Link3</li>
+  </ul>
+</div>
+
+
+
 <div id="container">
-  <h1>Welcome to backbone failboat app</h1>
+
 </div>
