ghetto hacked comments to load/work by rerendering the whole show page on every added comment

--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -17,3 +17,15 @@
 <% } else { %>
   <a href="#" class="toggle">Mark as finished</a>
 <% } %>
+
+<ul id="comments">
+
+</ul>
+
+
+<form id="new_comment_form">
+  <input type="text" name="content" id="new_comment_content">
+  <input type="submit" value="Add Comment">
+</form>
+
+<a href='#' id="load_comments">Load Comments</a>
