failboat choo choo

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div id="header">
   <h1 id="welcome">Welcome to a crappy one page app</h1>
   <ul id="nav_links">
-    <li>Link1</li>
+    <li><a href='#' id="home">Home</a></li>
     <li>Link2</li>
     <li>Link3</li>
   </ul>
