--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <div id="header">
-  <h1 id="welcome">Welcome to a crappy one page app</h1>
+  <h1 id="welcome">Welcome to the crappy one page project management system.</h1>
   <ul id="nav_links">
     <li><a href='#' id="home">Home</a></li>
     <li>Link2</li>
