Made a lot of changes, really ended up not doing much to the routing... added twitter bootstrap in the meantime

--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -1,6 +1,6 @@
 <% if(user) { %>
 
-  <a href="#" id="log_out">Log Out</a>
+  <a href="#sign_out" id="log_out">Log Out</a>
 
   <h2>Boards for <%= user.get('email') %></h2>
 
