--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,41 +2,41 @@ body {
   background-color: #eee;
 }
 
-#header {
-  width: 1000px;
-  height: 100px;
-  position: relative;
-  margin-bottom: 20px;
-  margin-top: -20px;
-  background-color: #666666;
-  color: #fff;
+// #header {
+//   width: 1000px;
+//   height: 100px;
+//   position: relative;
+//   margin-bottom: 20px;
+//   margin-top: -20px;
+//   background-color: #666666;
+//   color: #fff;
 
-  h1 {
-    padding: 3px;
-    margin: 20px 0 0 10px;
-  }
+//   h1 {
+//     padding: 3px;
+//     margin: 20px 0 0 10px;
+//   }
 
-  li {
-    display: inline;
-    padding: 4px;
-  }
-}
+//   li {
+//     display: inline;
+//     padding: 4px;
+//   }
+// }
 
-#container {
-  width: 1000px;
-  position: relative;
-}
+// #container {
+//   width: 1000px;
+//   position: relative;
+// }
 
-#main {
-  background-color: #fff;
-  width: 500px;
-  float: left;
-  border: 1px solid gray; 
-}
+// #main {
+//   background-color: #fff;
+//   width: 500px;
+//   float: left;
+//   border: 1px solid gray; 
+// }
 
-#sidebar {
-  background-color: #fff;
-  width: 480px;
-  float: left;
-  border: 1px solid gray;
-}
+// #sidebar {
+//   background-color: #fff;
+//   width: 480px;
+//   float: left;
+//   border: 1px solid gray;
+// }
