--- a/app/assets/templates/users/login.jst.ejs
+++ b/app/assets/templates/users/login.jst.ejs
@@ -1,5 +1,7 @@
+
 <form id="login-form" class="form-horizontal">
   <fieldset>
+    <legend><h1>Please Log In</h1></legend>
     <div id="email_group" class="control-group">
       <label class="control-label" for="email">Email</label>
       <div class="controls">
