--- a/app/assets/templates/users/signup.jst.ejs
+++ b/app/assets/templates/users/signup.jst.ejs
@@ -1,5 +1,6 @@
 <form id="signup-form" class="form-horizontal">
   <fieldset>
+    <legend><h1>Sign Up</h1></legend>
     <div id="email_group" class="control-group">
       <label class="control-label" for="login_user_email">Email</label>
       <div class="controls">
