--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,2 +1,2 @@
-<a href="#boards/<%= task.get('board_id') %>/tasks/<%= task.get('id') %>"><%= task.escape('name') %></a> 
+<a href="#boards/<%= board_id %>/tasks/<%= id %>"><%= name %></a> 
 <input type="checkbox" name="remove">
