finally figured out the perfect combination of task_ids and includeInJSON = false

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,10 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span9" id="main">
+          <div class="row-fluid" id="container">
+
+
+          </div>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
