fixed annoying bug

--- a/app/assets/templates/utilities/controls.jst.ejs
+++ b/app/assets/templates/utilities/controls.jst.ejs
@@ -1,8 +1,8 @@
-<% if(user.get('email')) { %>
+<% if(email) { %>
 
 <ul class="nav nav-list" id="nav-sidebar">
   <li class="nav-header" id="sidebar-header">
-    Controls for <%= user.get('email') %>
+    Controls for <%= email %>
   </li>
   <li><a href="#">Boards Index</a></li>
   <li class="nav-header" id="sidebar-account">
