added delete boards functionality

--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -1,4 +1,4 @@
-<h1><%= name %></h1>
+<h1><%= name %> <a href="#" class="btn btn-large btn-danger" id="delete_board">Delete Board</a></h1>
 
 <h3>Remaining Tasks: </h3>
 
