working well enough

--- a/app/assets/templates/utilities/info.jst.ejs
+++ b/app/assets/templates/utilities/info.jst.ejs
@@ -1,2 +1,1 @@
-<p>Welcome to the Failboat one page project management system.  Please
-have fun while you're here and remember, it is called failboat.</p>
+<li><a href="#"><span>Home</span> <i class="icon icon-home"></i></a></li>
