--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require bootstrap_and_overrides
+ *= require uniform
+ *= require select2
+ *= require unicorn.main
+ *= require unicorn.blue
+ *= require custom
  */
 
 .finished {
