--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Failboat" %></title>
+    <title>BSS Admin Portal</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -14,60 +13,64 @@
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
+
   </head>
   <body>
+    
+    
+  <div id="header">
+    <h1></h1>
+  </div>
+  
+  <div id="user-nav" class="navbar navbar-inverse">
+    <ul class="nav btn-group">
+      <li class="btn btn-inverse" ><a title= href="#"><i class="icon icon-user"></i> <span class="text">Profile</span></a></li>
+      <li class="btn btn-inverse dropdown" id="menu-messages"><a href="#" data-toggle="dropdown" data-target="#menu-messages" class="dropdown-toggle"><i class="icon icon-envelope"></i> <span class="text">Messages</span> <span class="label label-important">5</span> <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a class="sAdd" title= href="#">new message</a></li>
+          <li><a class="sInbox" title= href="#">inbox</a></li>
+          <li><a class="sOutbox" title= href="#">outbox</a></li>
+          <li><a class="sTrash" title= href="#">trash</a></li>
+        </ul>
+      </li>
+      <li class="btn btn-inverse"><a title= href="#"><i class="icon icon-cog"></i> <span class="text">Settings</span></a></li>
+      <li class="btn btn-inverse"><a href="#sign_out"><i class="icon icon-share-alt"></i> <span class="text">Logout</span></a></li>
+    </ul>
+  </div>
+          
+  <div id="sidebar">
+    <ul id="sidebar_ul">
+      <li><a href="#"><span>Dashboard</span> <i class="icon icon-home"></i></a></li>
+      <% if user_signed_in? %>
+      <li><a href="#"><span>Manage Account</span></a></li>
+      <li><a href="#"><span>Inbox</span></a></li>
+      <li><a href="#"><span>Messages</span></a></li>
+      <% end %>
+    </ul>
+  </div>
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Failboat</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav" id="main_nav">
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-              <% if user_signed_in? %>
-              <li><a href="#sign_out" id="sign_out_nav">Sign Out</a></li>
-              <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
+  
+  <div id="content">
+    <div id="content-header">
+      <%= yield(:header) if content_for?(:header) %>
+    </div>
+    <div id="breadcrumb">
+      <%= yield(:bread_crumbs) if content_for?(:bread_crumbs) %>
+    </div>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12 center">
+          <%= bootstrap_flash %>
+          <%= yield %>         
+        </div>  
+      </div>
+      <div class="row-fluid">
+        <div id="footer" class="span12">
+          2013 &copy; Shitty 1 page app
         </div>
       </div>
     </div>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav" id="sidebar">
-            <ul class="nav nav-list" id="nav-sidebar">
-              <!-- Look in controls.jst.ejs for header format -->
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9" id="main">
-          <div class="row-fluid" id="container">
-
-
-          </div>
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
-
-      <footer>
-        <p>&copy; The most awesome 1 page app ever</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    </div>
     <%= javascript_include_tag "application" %>
-
   </body>
 </html>
