--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,2 +1,2 @@
-<a href="#boards/<%= board_id %>/tasks/<%= id %>"><%= name %></a> 
-<input type="checkbox" name="remove">
+<a href="#boards/<%= board_id %>/tasks/<%= id %>" class="link_list"><%= name %></a> 
+<a href="#" class="btn btn-small btn-danger delete_button">delete</a>
