--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
   
   <div id="content">
     <div id="content-header">
-      <%= yield(:header) if content_for?(:header) %>
+      <h1 id="page_header">Content Page Header <a href="#">Back</a></h1>
     </div>
     <div id="breadcrumb">
       <%= yield(:bread_crumbs) if content_for?(:bread_crumbs) %>
@@ -60,8 +60,10 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12 center">
+          <div class="row-fluid" id="main">
           <%= bootstrap_flash %>
           <%= yield %>         
+          </div>
         </div>  
       </div>
       <div class="row-fluid">
