--- a/app/assets/templates/boards/name_form.jst.ejs
+++ b/app/assets/templates/boards/name_form.jst.ejs
@@ -1,4 +1,4 @@
 <form id="edit_board_name_form">
-  <input type="text" name="name" id="edit_board_name" value="">
+  <input type="text" name="name" id="edit_board_name" value="<%= name %>">
   <input type="submit" value="Edit Name">
 </form>
