overhauled task_show page to drop the board, and just include comments in a separate container, need to update top bar with more options, include users, and clean up editing the task

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
   
   <div id="content">
     <div id="content-header">
-      <h1 id="page_header">Content Page Header <a href="#">Back</a></h1>
+      <h1 id="page_header"></h1>
     </div>
     <div id="breadcrumb">
       <%= yield(:bread_crumbs) if content_for?(:bread_crumbs) %>
