--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,2 +1,3 @@
-<a href="#boards/<%= board_id %>/tasks/<%= id %>" class="link_list"><%= name %></a> 
+<a href="#boards/<%= board_id %>/tasks/<%= id %>" class="link_list" data-toggle="tooltip" title="<%= description %>"><%= name %></a> 
 <a href="#" class="btn btn-small btn-danger delete_button">delete</a>
+
