added default scope to comment.rb, some styling changes to tasks show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,6 +19,12 @@
 #edit_board_name_form {
   display: inline; 
 }
+
+.nopadding {
+  h3 {
+    margin-left: 8px;
+  }
+}
 // #header {
 //   width: 1000px;
 //   height: 100px;
