--- a/app/assets/templates/tasks/show_task.jst.ejs
+++ b/app/assets/templates/tasks/show_task.jst.ejs
@@ -26,9 +26,9 @@
       <div class="widget-title">
         <h5>Task information</h5>
       </div>
-      <div class="widget-content">
-
-        <ul class="site-stats" id="comments">
+      <div class="widget-content nopadding">
+        <h3>Comments</h3>
+        <ul class="recent-comments" id="comments">
               
         </ul>
       </div>
