--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -1,24 +1,60 @@
-<div class="widget-box">
-  <div class="widget-title">
-    <h5>Current Tasks</h5>
-    <span title="current" class="label label-info tip-left">
-      Here we go bro
-    </span>
-  </div>
-  <div class="widget-content">
-    <h3>Current Tasks</h3>
-    <ul class="site-stats" id="tasks">
-      
-    </ul>
-    <h3>Finished Tasks</h3>
-    <ul class="site-stats" id="finished"></ul>
-
-    <form id="new_task">
-      <input type="text" name="name" id="new_task_name">
-      <input type="submit" value="Add New Task">
-    </form>
-
-  </div>     
+<div id="content-header">
+  <h1 id="page_header">
+    <span id="name"><%= name %></span> 
+    <a href="#" class="btn btn-success" id="edit_name_button">Edit Name</a>
+    <a href="#" class="btn btn-info" id="edit_users">Edit Users</a>
+    <a href="#" class="btn btn-danger" id="delete_board">Delete Board</a>
+  </h1>
 </div>
+<div id="breadcrumb">
+  <a href="#">Back To Board Index</a>
+</div>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12 center">
+      <div class="row-fluid" id="main">
+        <!-- this is where we put the yield content -->
+        <div class="span6" id="task_div">
+          <div class="widget-title">
+            <h5>Current Tasks</h5>
+            <span title="current" class="label label-info tip-left">
+              Here we go bro
+            </span>
+          </div>
+          <div class="widget-content">
+            <h3>Current Tasks</h3>
+            <ul class="site-stats" id="tasks">
+              
+            </ul>
+            <h3>Finished Tasks</h3>
+            <ul class="site-stats" id="finished"></ul>
 
+            <form id="new_task">
+              <input type="text" name="name" id="new_task_name">
+              <input type="submit" value="Add New Task">
+            </form>
 
+          </div>     
+        </div> <!-- span6 -->
+        <div class="span6" id="board_info">
+          <div class="widget-box">
+            <div class="widget-title">
+              <h5>Board Information</h5>
+            </div> <!-- widget-title -->
+            <div class="widget-content nopadding">
+              <h3>Users</h3>
+              <ul class="contact-list" id="user-list">
+                    
+              </ul>
+            </div> <!-- widget-content -->
+          </div> <!-- widget-box -->
+        </div> <!-- span6 -->
+      </div> <!-- rowfluid -->
+    </div> <!-- span12 center -->
+  </div> <!-- row-fluid -->
+  <div class="row-fluid">
+    <div id="footer" class="span12">
+      2013 &copy; Shitty 1 page app
+    </div>
+  </div>
+</div> <!-- container-fluid -->
