--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -15,25 +15,25 @@
       <div class="row-fluid" id="main">
         <!-- this is where we put the yield content -->
         <div class="span6" id="task_div">
-          <div class="widget-title">
-            <h5>Current Tasks</h5>
-            <span title="current" class="label label-info tip-left">
-              Here we go bro
-            </span>
-          </div>
-          <div class="widget-content">
-            <h3>Current Tasks</h3>
-            <ul class="site-stats" id="tasks">
-              
-            </ul>
-            <h3>Finished Tasks</h3>
-            <ul class="site-stats" id="finished"></ul>
+          <div class="widget-box">
+            <div class="widget-title">
+              <h5>Current Tasks</h5>
+              <span title="current" class="label label-info tip-left">
+                Here we go bro
+              </span>
+            </div>
+            <div class="widget-content">
+              <ul class="site-stats" id="tasks">
+                
+              </ul>
+              <h3>Finished Tasks</h3>
+              <ul class="site-stats" id="finished"></ul>
 
-            <form id="new_task">
-              <input type="text" name="name" id="new_task_name">
-              <input type="submit" value="Add New Task">
-            </form>
-
+              <form id="new_task">
+                <input type="text" name="name" id="new_task_name">
+                <input type="submit" value="Add New Task">
+              </form>
+            </div>
           </div>     
         </div> <!-- span6 -->
         <div class="span6" id="board_info">
