--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -1,26 +1,34 @@
-<% if(user) { %>
-
+<div id="content-header">
+  <h1 id="page_header">
+    <span id="name">Boards for <%= email %></span> 
+  </h1>
+</div>
+<div id="breadcrumb">
   <a href="#sign_out" id="log_out">Log Out</a>
-
-  <h2>Boards for <%= user.get('email') %></h2>
-
-  <h2>Current Boards</h2>
-  <ul id="boards">
-  </ul>
-
-  <h3>Create a new board</h3>
-
-  <form id="new_board">
-    <input type="text" name="name" id="new_board_name">
-    <input type="submit" value="Add New Board">
-  </form>
-
-
-
-<% } else { %>
-  <h1>Please Login or Sign Up</h1>
-
-  <a href="#log_in" id="log_in">Log In</a> or 
-  <a href="#sign_in" id="sign_in">Sign Up</a>
-
-<% } %>
+</div>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12 center">
+      <div class="widget-box">
+        <div class="widget-title">
+          <h5>All Boards</h5>
+          <span title="current" class="label label-info tip-left">
+            <%= length %> boards
+          </span>
+        </div>
+        <div class="widget-content">
+          <ul class="site-stats" id="boards"></ul>
+          <form id="new_board">
+            <input type="text" name="name" id="new_board_name">
+            <input type="submit" value="Add New Board">
+          </form>
+        </div>
+      </div>     
+    </div>
+  </div> <!-- row-fluid -->
+  <div class="row-fluid">
+    <div id="footer" class="span12">
+      2013 &copy; Shitty 1 page app
+    </div>
+  </div>
+</div> <!-- container-fluid -->
