rerendering comments/tasks manually if I hit the render event when add:tasks and add:comments are no longer being triggered, also fixed a bug with link back to board

--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -23,9 +23,7 @@
               </span>
             </div>
             <div class="widget-content">
-              <ul class="site-stats" id="tasks">
-                
-              </ul>
+              <ul class="site-stats" id="tasks"></ul>
               <h3>Finished Tasks</h3>
               <ul class="site-stats" id="finished"></ul>
 
