--- a/app/assets/templates/tasks/show_task.jst.ejs
+++ b/app/assets/templates/tasks/show_task.jst.ejs
@@ -7,7 +7,7 @@
   </h1>
 </div>
 <div id="breadcrumb">
-  <a href="#boards/<%= board_id %>">Back To Board</a>
+  <a href="#boards/<%= board %>">Back To Board</a>
 </div>
 <div class="container-fluid">
   <div class="row-fluid">
