minor changes to tasks show html, now going to try and bootstrap all users and give ability to give admin access and stuff

--- a/app/assets/templates/tasks/show_task.jst.ejs
+++ b/app/assets/templates/tasks/show_task.jst.ejs
@@ -29,7 +29,9 @@
               <% } else { %>
                 <a href='#' id="toggle" class="btn btn-small btn-danger">Mark As Finished</a>
               <% } %>
-              <p id="description"><%= description %> <a href="#" class="edit">Edit</a></p>
+              <br><br>
+              <p id="description"><%= description %></p>
+              <a href="#" class="edit">Edit Description</a>
               <form id="add_comment">
                 <input type="text" name="name" id="new_comment">
                 <input type="submit" value="Add New Comment">
