rather large refactoring of tasks_router, also bootstrapped boards and user data

--- a/app/assets/templates/boards/show.jst.ejs
+++ b/app/assets/templates/boards/show.jst.ejs
@@ -1,1 +1,2 @@
 <a href="#boards/<%= board.get('id') %>" class="board"><%= board.escape('name') %></a>
+<a href="#" class="btn btn-small btn-danger delete_button">Delete Board</a>
