--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
       <h1 id="page_header"></h1>
     </div>
     <div id="breadcrumb">
+      <%= yield %>
     </div>
     <!-- <div class="container-fluid">
       <div class="row-fluid">
@@ -74,5 +75,6 @@
 
   </div>
     <%= javascript_include_tag "application" %>
+    <%= yield(:javascript) %>
   </body>
 </html>
