begin view cleanup using compositeview and support router

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,8 +8,12 @@
   font-style: italic;
 }
 
-.delete_button {
+.delete_button, .toggle, .right {
   float: right;
+}
+
+.toggle {
+  margin-right: 3px;
 }
 
 // .widget-box {
