--- a/app/assets/templates/comments/show.jst.ejs
+++ b/app/assets/templates/comments/show.jst.ejs
@@ -1,5 +1,5 @@
 <div class="comments">
   <span class="user-info"><%= poster_name %> at <%= created_at %></span>
-  <p><%= content %></p>
+  <p><%= content %> <a href="#" class="btn btn-small btn-danger delete_button">Delete</a></p> 
 </div>
 
