--- a/app/assets/templates/tasks/task.jst.ejs
+++ b/app/assets/templates/tasks/task.jst.ejs
@@ -1,3 +1,4 @@
 <a href="#boards/<%= board_id %>/tasks/<%= id %>" class="link_list" data-toggle="tooltip" title="<%= description %>"><%= name %></a> 
-<a href="#" class="btn btn-small btn-danger delete_button">delete</a>
+<a href="#" class="btn btn-small btn-danger delete_button">delete</a> 
+<a href="#" class="btn btn-small btn-info toggle">Mark As Finished</a>
 
