bsically created my own associations and dumped backbone relational

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,11 @@
   width: 80%;
   height: 80px;
 }
+
+
+.finished {
+  text-decoration: line-through;
+}
 // #header {
 //   width: 1000px;
 //   height: 100px;
