refactoring views into marionette itemview/collectionview

--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -22,10 +22,8 @@
                 Here we go bro
               </span>
             </div>
-            <div class="widget-content">
-              <ul class="site-stats" id="tasks"></ul>
-              <h3>Finished Tasks</h3>
-              <ul class="site-stats" id="finished"></ul>
+            <div class="widget-content" id="list">
+              
 
               <form id="new_task">
                 <input type="text" name="name" id="new_task_name">
