--- a/app/assets/templates/tasks/show_task.jst.ejs
+++ b/app/assets/templates/tasks/show_task.jst.ejs
@@ -51,10 +51,8 @@
               <% } else { %>
                 <a href='#' id="toggle" class="btn btn-danger">Mark As Finished</a>
               <% } %>
-              <h3>Comments</h3>
-              <ul class="recent-comments" id="comments">
-                    
-              </ul>
+              <h3 id="comment">Comments</h3>
+
             </div> <!-- widget-content -->
           </div> <!-- widget-box -->
         </div> <!-- span6 -->
