still refactoring with marionette

--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,3 +1,7 @@
 <ul class="site-stats" id="tasks"></ul>
 <h3>Finished Tasks</h3>
 <ul class="site-stats" id="finished"></ul>
+<form id="new_task">
+  <input type="text" name="name" id="new_task_name">
+  <input type="submit" value="Add New Task">
+</form>
