--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -23,7 +23,13 @@
               </span>
             </div>
             <div class="widget-content" id="list">
-
+              <ul class="site-stats" id="tasks"></ul>
+              <h3>Finished Tasks</h3>
+              <ul class="site-stats" id="finished"></ul>
+              <form id="new_task">
+                <input type="text" name="name" id="new_task_name">
+                <input type="submit" value="Add New Task">
+              </form>
             </div>
           </div>     
         </div> <!-- span6 -->
