--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -38,11 +38,8 @@
             <div class="widget-title">
               <h5>Board Information</h5>
             </div> <!-- widget-title -->
-            <div class="widget-content nopadding">
-              <h3>Users</h3>
-              <ul class="contact-list" id="user-list">
-                    
-              </ul>
+            <div class="widget-content nopadding" id="users">
+              
             </div> <!-- widget-content -->
           </div> <!-- widget-box -->
         </div> <!-- span6 -->
