--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -1,6 +1,6 @@
 <div id="content-header">
   <h1 id="page_header">
-    <span id="name"><%= name %></span> 
+    <span id="board_name"><%= name %></span> 
     <a href="#" class="btn btn-success" id="edit_name_button">Edit Name</a>
     <a href="#" class="btn btn-info" id="edit_users">Edit Users</a>
     <a href="#" class="btn btn-danger" id="delete_board">Delete Board</a>
