--- a/app/assets/templates/tasks/show_task.jst.ejs
+++ b/app/assets/templates/tasks/show_task.jst.ejs
@@ -29,7 +29,7 @@
               </span>
             </div> <!-- widget-title -->
             <div class="widget-content">
-              <h3><%= name %></h3>
+              <h3 id="task_name"><%= name %></h3>
               <br>
               <p id="description"><%= description %></p>
               <a href="#" class="edit">Edit Description</a>
