--- a/app/assets/templates/users/user_list.jst.ejs
+++ b/app/assets/templates/users/user_list.jst.ejs
@@ -1,9 +1,15 @@
-<h4>Users Assigned to This Board</h4>
-<ul class="site-stats" id="user-list">
-      
-</ul>
+<div class="widget-title">
+  <h5>Board Information</h5>
+</div>
 
-<form id="edit_board_name_form">
-  <input type="text" name="name" id="edit_board_name" value="<%= name %>">
-  <input type="submit" value="Edit Name">
-</form>
+<div class="widget-content" id="users">
+  <h4>Users Assigned to This Board</h4>
+  <ul class="site-stats" id="user-list">
+        
+  </ul>
+
+  <form id="add_users_form">
+    <input type="text" name="name" id="user_email">
+    <input type="submit" value="Add User (by email)">
+  </form>
+</div>
