added a lot of crap... added ability to see if someone is board admin and task admin, and ghetto hacked a way to see if current user is a board admin that has many many queries, need to fix later

--- a/app/assets/templates/users/show_user.jst.ejs
+++ b/app/assets/templates/users/show_user.jst.ejs
@@ -1,1 +1,7 @@
-<%= email %> <%= id %>
+<%= email %> 
+
+<% if(board_admin) { %>
+<span title="current" class="label label-info tip-left">
+  Admin
+</span>
+<% } %>
