--- a/app/assets/templates/boards/show.jst.ejs
+++ b/app/assets/templates/boards/show.jst.ejs
@@ -1,2 +1,4 @@
-<a href="#boards/<%= board.get('id') %>" class="board"><%= board.escape('name') %></a>
+<a href="#boards/<%= board_id %>" class="board"><%= name %></a>
+<% if(board_admin) { %>
 <a href="#" class="btn btn-small btn-danger delete_button">Delete Board</a>
+<% } %>
