--- a/app/assets/templates/tasks/show_task.jst.ejs
+++ b/app/assets/templates/tasks/show_task.jst.ejs
@@ -29,7 +29,16 @@
               </span>
             </div> <!-- widget-title -->
             <div class="widget-content">
-              <h3 id="task_name"><%= name %></h3>
+              <h3>
+                <span id="task_name">
+                <%= name %>     
+                </span>
+                <% if(done) { %>
+                  <a href='#' id="toggle" class="btn btn-danger">Mark As Unfinished</a>
+                <% } else { %>
+                  <a href='#' id="toggle" class="btn btn-danger">Mark As Finished</a>
+                <% } %>
+              </h3>
               <br>
               <p id="description"><%= description %></p>
               <a href="#" class="edit">Edit Description</a>
@@ -46,11 +55,7 @@
               <h5>Task information</h5>
             </div> <!-- widget-title -->
             <div class="widget-content nopadding">
-              <% if(done) { %>
-                <a href='#' id="toggle" class="btn btn-danger">Mark As Unfinished</a>
-              <% } else { %>
-                <a href='#' id="toggle" class="btn btn-danger">Mark As Finished</a>
-              <% } %>
+
               <h3 id="comment">Comments</h3>
               <ul class="recent-comments" id="comments">
               </ul>
