--- a/app/assets/templates/boards/show_board.jst.ejs
+++ b/app/assets/templates/boards/show_board.jst.ejs
@@ -41,7 +41,7 @@
   </div> <!-- row-fluid -->
   <div class="row-fluid">
     <div id="footer" class="span12">
-      2013 &copy; Shitty 1 page app
+      2013 &copy; Charlie Sahlman
     </div>
   </div>
 </div> <!-- container-fluid -->
