--- a/app/assets/templates/users/user_list.jst.ejs
+++ b/app/assets/templates/users/user_list.jst.ejs
@@ -8,8 +8,13 @@
         
   </ul>
 
-  <form id="add_users_form">
+  <!-- <form id="add_users_form">
     <input type="text" name="name" id="user_email">
     <input type="submit" value="Add User (by email)">
+  </form> -->
+  <form id="add_users_form">
+    <label>Add Users To Board (by email)</label>
+    <input type="text" name="name" id="user_email">
+    <input type="submit" value="Add User">
   </form>
 </div>
