--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
       </div>
       <div class="row-fluid">
         <div id="footer" class="span12">
-          2013 &copy; Shitty 1 page app
+          2013 &copy; Charlie Sahlman
         </div>
       </div>
     </div> -->
